Exempel för MVC

--- a/MVCExampleProjekt/Views/Home/Index.cshtml
+++ b/MVCExampleProjekt/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
-﻿@{
-    
-}
+﻿@*Det här är startsidan för hela webbplatsen.
+    Om Ingen Controller eller Action anges så gäller 
+    Controller = Home
+    Action = Index. 
+    Kan ändras i Program.cs, rad 23ff.
+*@
 
+@* Låtsas information om servern*@
 <div class="text-center">
     <h1 class="display-4">Vår Lilla Webbshop</h1>
     <hr />
