--- a/MVCExampleProjekt/Views/Kund/Index.cshtml
+++ b/MVCExampleProjekt/Views/Kund/Index.cshtml
@@ -2,33 +2,55 @@
 
 
 <style>
-    .message { padding: 10px; border: 2px solid red; background-color: salmon; color: darkred;}
-    .kundlista { border: 3px solid blue; }
-    .kundlista-rad:nth-child(2n-1) {background-color: lightblue; }
-    h2 { background-color: lightgray; }
+	.message {
+		padding: 10px;
+		border: 2px solid red;
+		background-color: salmon;
+		color: darkred;
+	}
+
+	.kundlista {
+		border: 3px solid blue;
+	}
+
+	.kundlista-rad:nth-child(2n-1) {
+		background-color: lightblue;
+	}
+
+	h2 {
+		background-color: lightgray;
+	}
 </style>
 
 
- @if(ViewBag.Message != null){
-    <h4 style="border: 1px solid red; padding: 5px;">
-            Meddelande @ViewBag.Message
-           </h4>
- }
-    
+@if (ViewBag.Message != null)
+{
+	<h4 style="border: 1px solid red; padding: 5px;">
+		Meddelande @ViewBag.Message
+	</h4>
+}
+
 
 @model List<Kund>
 
 <div class="kundlista">
-    <h2>Alla våra kunder</h2>
-    @if(Model != null){
-    foreach(Kund k in Model){
-        <div class="tabcontainer">
-               <span class="tabell"> @k.realname </span>
-                <span class="tabell">@Html.ActionLink("Redigera","RedigeraKundPara","Kund", new {Id = k.Id}) </span>
-                <span class="tabell"> @Html.ActionLink("Radera","RaderaKundPara","Kund", new {Id = k.Id})</span>
-        </div>
-    }
-    }
-  
+	<h>Alla våra kunder</h>
+	@if (Model != null)
+	{
+		foreach (Kund k in Model)
+		{
+			<div class="tabcontainer">
+				<span class="tabell">(@k.Id:)  @k.realname </span>
+				<span class="tabell">@Html.ActionLink("Redigera","RedigeraKund","Kund", new {Id = k.Id}) </span>
+				<span class="tabell"> @Html.ActionLink("Radera","RaderaKund","Kund", new {Id = k.Id})</span>
+			</div>
+		}
+		@Html.ActionLink("Ny kund", "NyKund","Kund")
+		
+	}
+
+	
+
+
 
 </div>
