--- a/MVCExampleProjekt/Views/Shared/_Layout.cshtml
+++ b/MVCExampleProjekt/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@*Visual studio standard layoutsida.
+    Det här är mallen för alla sidor
+    View:n som ska visas klistras in i rad 47
+    @RenderBody
+*@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
