Nu med partialView

--- a/MVCExampleProjekt/Views/Partials/RedigeraKundPartial.cshtml
+++ b/MVCExampleProjekt/Views/Partials/RedigeraKundPartial.cshtml
@@ -1,5 +1,11 @@
 ﻿@model MVCExampleProjekt.Models.Kund
 
+@{
+    ViewData["Title"] = "RedigeraKundPartial";
+}
+
+<h1>RedigeraKundPartial</h1>
+
 <h4>Kund</h4>
 <hr />
 <div class="row">
