--- a/MVCExampleProjekt/Views/Kund/RedigeraKundAuto.cshtml
+++ b/MVCExampleProjekt/Views/Kund/RedigeraKundAuto.cshtml
@@ -6,7 +6,48 @@
 
 <h1>RedigeraKundAuto</h1>
 
-<partial name="/Views/Partials/RedigeraKundPartial.cshtml" />
+<h4>Kund</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="RedigeraKundAuto">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="username" class="control-label"></label>
+                <input asp-for="username" class="form-control" />
+                <span asp-validation-for="username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="password" class="control-label"></label>
+                <input asp-for="password" class="form-control" />
+                <span asp-validation-for="password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="realname" class="control-label"></label>
+                <input asp-for="realname" class="form-control" />
+                <span asp-validation-for="realname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="language" class="control-label"></label>
+                <input asp-for="language" class="form-control" />
+                <span asp-validation-for="language" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="age" class="control-label"></label>
+                <input asp-for="age" class="form-control" />
+                <span asp-validation-for="age" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="credit" class="control-label"></label>
+                <input asp-for="credit" class="form-control" />
+                <span asp-validation-for="credit" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
