--- a/MVCExampleProjekt/Views/Order/Index.cshtml
+++ b/MVCExampleProjekt/Views/Order/Index.cshtml
@@ -1,5 +1,14 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<Order>
+
+	<ul>
+	@foreach(Order o in Model){
+		<li>Order @o.Id : Kund: @o.Bestallare.realname
+		<ul>
+			@foreach(Produkt p in o.inkopslist)
+			{
+				<li>@p.produktnamn, @p.tillverkare Pris: @p.pris</li>
+			}
+		</ul>
+		</li>
+	}
+</ul>
