LoginPartial och Validation

--- a/MVCExampleProjekt/Views/Order/Index.cshtml
+++ b/MVCExampleProjekt/Views/Order/Index.cshtml
@@ -1,14 +1,18 @@
 ﻿@model List<Order>
 
-	<ul>
-	@foreach(Order o in Model){
-		<li>Order @o.Id : Kund: @o.Bestallare.realname
-		<ul>
-			@foreach(Produkt p in o.inkopslist)
-			{
-				<li>@p.produktnamn, @p.tillverkare Pris: @p.pris</li>
-			}
-		</ul>
+<ul>
+	@foreach (Order o in Model)
+	{
+		<li>
+			Order @o.Id : Kund: @o.Bestallare.realname
+			<ul>
+				@foreach (Produkt p in o.inkopslist)
+				{
+					<li>@p.produktnamn, @p.tillverkare Pris: @p.pris</li>
+				}
+			</ul>
 		</li>
 	}
 </ul>
+
+
