--- a/MVCExampleProjekt/Views/Shared/_Layout.cshtml
+++ b/MVCExampleProjekt/Views/Shared/_Layout.cshtml
@@ -35,8 +35,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Beställningar</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Logga in</a>
+                        </li>
                     </ul>
                 </div>
+                <span> Hello @ViewBag.AktuellNamn </span>
             </div>
         </nav>
     </header>
