--- a/MVCExampleProjekt/Views/Shared/_LayoutAdmin.cshtml
+++ b/MVCExampleProjekt/Views/Shared/_LayoutAdmin.cshtml
@@ -35,9 +35,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Beställningar</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Logga in</a>
-                        </li>
+                       
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Speciale! </a>
@@ -50,7 +48,7 @@
                         </li>
                     </ul>
                 </div>
-                <span> Hello @ViewBag.AktuellNamn </span>
+                <span> Hello @ViewBag.AktuellNamn (OBS! ADMIN!)</span>
             </div>
         </nav>
     </header>
