--- a/MVCExampleProjekt/Views/Kund/NyKund.cshtml
+++ b/MVCExampleProjekt/Views/Kund/NyKund.cshtml
@@ -1,38 +1,14 @@
 ﻿@model MVCExampleProjekt.Models.Kund
 
+@if(ViewBag.Message != null){
+    <h4 style="border: 1px solid red; padding: 5px;">
+            Meddelande @ViewBag.Message
+           </h4>
+}
 
 <h1>NyKund</h1>
 
 <div>
     <h4>Skapa ny kund</h4>
-    <h3></h3>
-
-    @if (Model == null)  // Om ingen har skickats från Kundcontroller
-    {
-        <form action="SparaNyKundByClass" method="POST">
-            <label>Namn</label><input type="text" name="realname" />
-        <label>Användarnamn</label><input type="text" name="username" />
-        <label>Språk</label><input type="text" name="language" />
-        <button type="submit">Skicka!</button>
-
-        </form>
-    }
-    else  // Om Model är fylld med data
-    {
-        <form action="/Kund/SparaNyKundByClass" method="POST">
-            <label>Namn</label><input type="text" name="realname" value="@Model.realname" />
-            <label>Användarnamn</label><input type="text" name="username" value="@Model.username" />
-            <label>Språk</label><input type="text" name="language" value="@Model.language" />
-            <button type="submit">Skicka!</button>
-
-        </form>
-        
-    }
-
+    <partial name="NyKundPartial" />    
 </div>
-
-    @if(ViewBag.Message != null){
-    <h4 style="border: 1px solid red; padding: 5px;">
-            Meddelande @ViewBag.Message
-           </h4>
-}
