--- a/MVCExampleProjekt/Views/Kund/NyKundPartial.cshtml
+++ b/MVCExampleProjekt/Views/Kund/NyKundPartial.cshtml
@@ -1,16 +1,10 @@
 ﻿@model MVCExampleProjekt.Models.Kund
 
-@{
-    ViewData["Title"] = "RedigeraKundAuto";
-}
-
-<h1>RedigeraKundAuto</h1>
-
 <h4>Kund</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="RedigeraKundAuto">
+        <form asp-action="SparaNyKund" method="POST">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="username" class="control-label"></label>
@@ -42,8 +36,9 @@
                 <input asp-for="credit" class="form-control" />
                 <span asp-validation-for="credit" class="text-danger"></span>
             </div>
+            <hr />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Spara kund" class="btn btn-primary" />
             </div>
         </form>
     </div>
