--- a/MVCExampleProjekt/Views/Kund/RedigeraKund.cshtml
+++ b/MVCExampleProjekt/Views/Kund/RedigeraKund.cshtml
@@ -13,17 +13,10 @@
     </h4>
 }
 
-<h3> Tre olika sätt för formulär</h3>
-
 
 @*Automatisk genererad formulär med hjälp VS assistenten. *@
 <div class="partialexample">
-    <partial name="/Views/Partials/RedigeraKundPartial.cshtml" />
+    <partial name="RedigeraKundPartial.cshtml" />
    
 </div>
 
-<hr />
-
-@* Data av detta formulär skicka till metoden RedigeraKundByParameter i KundController.cs
-    Ordning av parameter spelar ingen roll, de hittar varandra pga namnet
-*@
