--- a/MVCExampleProjekt/Views/Login/LoginPartial.cshtml
+++ b/MVCExampleProjekt/Views/Login/LoginPartial.cshtml
@@ -6,7 +6,14 @@
     <div class="col-md-4">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+            @if(ViewBag.LoginError != null){
+            <div class="form-group">
+                <span class="text-danger">
+                    Användarnamn eller lösenord är felkatig!
+                </span>
+                </div>
+            }
+           
             <div class="form-group">
                 <label asp-for="mailadress" class="control-label"></label>
                 <input asp-for="mailadress" class="form-control" />
@@ -17,17 +24,15 @@
                 <input asp-for="password" class="form-control" type="password"/>
                 <span asp-validation-for="password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-4">
+                <input type="submit" value="Logga in" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
