--- a/MVCExampleProjekt/Views/Shared/_LayoutAdmin.cshtml
+++ b/MVCExampleProjekt/Views/Shared/_LayoutAdmin.cshtml
@@ -41,7 +41,7 @@
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li><a class="nav-link text-dark" asp-controller="Produkt" asp-action="Index">Översikt</a></li>
-								<li><a class="nav-link text-dark" asp-controller="Produkt" asp-action="NyKund">ny produkt</a></li>
+								<li><a class="nav-link text-dark" asp-controller="Produkt" asp-action="NyProdukt">ny produkt</a></li>
 							</ul>
 						</li>
 
