--- a/MVCExampleProjekt/Views/Login/LoginPersonalPartial.cshtml
+++ b/MVCExampleProjekt/Views/Login/LoginPersonalPartial.cshtml
@@ -4,7 +4,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
+        <form asp-action="LoginPersonal">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @if(ViewBag.LoginError != null){
             <div class="form-group">
@@ -16,12 +16,12 @@
            
             <div class="form-group">
                 <label asp-for="mailadress" class="control-label"></label>
-                <input asp-for="mailadress" class="form-control" />
+                <input asp-for="mailadress" class="form-control" value="hinra@jonkoping.se" />
                 <span asp-validation-for="mailadress" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="password" class="control-label"></label>
-                <input asp-for="password" class="form-control" type="password"/>
+                <input asp-for="password" class="form-control" type="password" value="123456" />
                 <span asp-validation-for="password" class="text-danger"></span>
             </div>
             <div class="form-group mt-4">
