--- a/MVCExampleProjekt/Views/Produkt/NyProdukt.cshtml
+++ b/MVCExampleProjekt/Views/Produkt/NyProdukt.cshtml
@@ -1,5 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+
+<div class="partialexample">
+    <partial name="NyProduktImagePartial.cshtml" />
+
+</div>
