--- a/MVCExampleProjekt/Views/Produkt/RedigeraProdukt.cshtml
+++ b/MVCExampleProjekt/Views/Produkt/RedigeraProdukt.cshtml
@@ -1,14 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@model Produkt
+﻿@model Produkt
+<div class="partialexample">
+    <partial name="RedigeraProduktPartial.cshtml" />
 
-<form asp-action="sparaProdukt" method="post">
-    <label>Produktnamn</label><input type="text" name="produktnamn" value="@Model.produktnamn" /><br />
-    <label>Tillverkare</label><input type="text" name="tillverkare" value="@Model.tillverkare" /><br />
-    <label>Pris</label><input type="text" name="pris" value="@Model.pris" /><br />
-    <input type="hidden" name="id" value="@Model.id" /><br />
-    <button type="submit">Spara ändringar</button>
-</form>
+</div>
