--- a/MVCExampleProjekt/Views/Shared/_LayoutGuest._BS_test.cshtml
+++ b/MVCExampleProjekt/Views/Shared/_LayoutGuest._BS_test.cshtml
@@ -14,25 +14,26 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ModelControllerViewIntro</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-xl navbar-light bg-light">
+            <div class="container-sm">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        
+                <div class="collapse navbar-collapse show" id="navbarTogglerDemo2">
+                    <ul class="navbar-nav me-auto mb-2 mb-xl-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp asp-area="" asp-controller="Login" asp-action="IndexKund">Kundinloggning</a>
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="IndexPersonal">Personalinloggning</a>
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
+                   
                 </div>
-                <span> Hello @ViewBag.AktuellNamn (Gäst)</span>
             </div>
         </nav>
     </header>
@@ -46,9 +47,6 @@
         </main>
     </div>
     <hr />
-
-  
-    
     
 
     <footer class="border-top footer text-muted">
